treactor/generated/httproute_atom-si.yaml
# Generate by gcr.io/treactor/kpt-fn/create-atoms
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: atom-si
  namespace: generated
  annotations:
    config.kubernetes.io/managed-by: fn:gen:gcr.io/treactor/kpt-fn/create-atoms
    config.kubernetes.io/local-config: "true"
spec:
  parentRefs:
  - name: gateway
  hostnames: ["treactor.example.com"]
  rules:
  - backendRefs:
    - name: atom-si
      port: 80
    matches:
    - path:
        value: /treact/nodes/14/info
